tests/valid/definite/BoolIfElse_Valid_1.whiley
void f(bool b):
    if(b):
        print "TRUE"
    else:
        print "FALSE"

void System::main([string] args):
    f(true)
    f(false)
