tests/invalid/simple/If_CompileFail_3.whiley
void f(bool z):
     if(z):
          int z